--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Shimmer</title>
 	
 <link rel="icon" href="https://media.lordicon.com/icons/wired/outline/1121-iota-internet-of-things.gif" type="image/gif">
-<link rel="apple-touch-icon" href="https://pbs.twimg.com/profile_images/1490084373735120902/pNUxfcAq_400x400.gif">
+<link rel="apple-touch-icon" href="https://media.lordicon.com/icons/wired/outline/1121-iota-internet-of-things.gif">
 	
   <link
     rel="stylesheet"
